--- a/Frontend/cashflow/src/features/usersPanel/styles.css
+++ b/Frontend/cashflow/src/features/usersPanel/styles.css
@@ -545,10 +545,10 @@ input::-webkit-inner-spin-button {
 }
 
 .adminPanelContainer #usersPanelTitle {
-    font-size: 50px;
-    position: fixed; /* Position it fixed to the viewport */
+    font-size: 40px;
+    position: absolute; /* Position it fixed to the viewport */
     left: 50%; /* Center horizontally */
-    transform: translate(-50%, -200%); /* Adjust for the element's own dimensions */
+    transform: translate(-50%, -220%); /* Adjust for the element's own dimensions */
     text-align: center;
     animation: pulse 2.5s infinite;
 }
